--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 			<h3 class="modal__title">Оставить заявку</h3>
 
 			<form class="callback" id="form-callback">
-				<label class="callback__box">
+				<div class="callback__box">
 					<input class="callback__item" required type="text">
 					<p class="callback__placeholder">ФИО <span>*</span></p>
-				</label>
+				</div>
 
-				<label class="callback__box">
+				<div class="callback__box">
 					<input class="callback__item" required type="tel" id="phone">
 					<p class="callback__placeholder">+7 (___) ___ - __ - __ <span>*</span></p>
-				</label>
-				
+				</div>
+
 				<div class="callback__box callback__box_dropdown" id="dropdown">
 					<div class="callback__item">Выберите город</div>
 					<ul class="callback__menu">
@@ -65,7 +65,6 @@
 				</div>
 			</form> <!-- /callback -->
 		</div>
-	
 	</div> <!-- /modal -->
 
 	<script src="https://unpkg.com/imask"></script><!-- маска для номера -->
